# fatfs_lib

./: CMakeLists.txt
fatfs_lib/: ffconf.h
fatfs_lib/src/option/: cc932.c  cc949.c  cc950.c  syscall.c
src/: ffconf.h
